Refactor DeviceRepo to remove unused Instant import and replace hardcoded payload key with a constant